# singer-schemagen

./: README.md  gen_schema.py  pyproject.toml
